--- a/intro.css
+++ b/intro.css
@@ -56,5 +56,14 @@ img.top {
     transform: translateX(-50%);
 }
 
+img.bottom {
+    display: block;
+    position: fixed;
+    left: 50%;
+    top: 100%;
+    width: 100%;
+    height: 100px;
+    transform: translateX(-50%);
+}
 
 
