its wednesday my dudes

--- a/intro.css
+++ b/intro.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    height: 100%;
     background-color: #FEE0E0;
 }
 
@@ -50,20 +51,17 @@ img.polaroid.c{
 img.top {
     display: block;
     position: fixed;
-    left: 50%;
+    top: 0;
     width: 100%;
-    height: 75px;
-    transform: translateX(-50%);
+    height: 100px;
 }
 
 img.bottom {
     display: block;
     position: fixed;
-    left: 50%;
     bottom: 0;
     width: 100%;
-    height: 75px;
-    transform: translateX(-50%);
+    height: 100px;
 }
 
 
