pseudo finished new page

--- a/file.css
+++ b/file.css
@@ -3,8 +3,36 @@ body {
 }
 
 .container {
-    position: fixed;
-    left: 30%;
+    display: grid;
+    grid-template-columns: 50% auto;
+    grid-template-rows: 50% auto;
+    width: 60%;
+    margin: 0 auto;
+    justify-items: center;
+    align-items: center;
+    height: 70%;
+}
+
+.container .img-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    gap: 10px 0px;
+}
+.container .item {
+    flex: 0 0 30%;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+button {
+    height: 40px;
+    background-color: #F81B3F;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    color: #FFEEEE;
+    box-shadow: none;
+    border: none;
+    border-radius: 15px;
 }
