--- a/letters/Reasons.css
+++ b/letters/Reasons.css
@@ -8,6 +8,12 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-family: 'Source serif 4';
+    font-size: 90px;
+    font-style: italic;
+}
+
 .number {
     font-size: 90px;
 }
