--- a/letters/Reasons.css
+++ b/letters/Reasons.css
@@ -6,11 +6,31 @@ body {
 h1 {
     font-family: 'Source serif 4';
     font-size: 50px;
+    font-weight: 100;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    margin: 0;
+    padding: 0;
 }
 
 h2 {
     font-family: 'Source serif 4';
-    font-size: 90px;
+    font-size: 120px;
+    font-style: italic;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    background: linear-gradient(
+    to top,
+    #B22222 50%,
+    transparent 50%
+  );
+}
+
+p {
+    margin: 0;
+    font-size: 30px;
     font-style: italic;
 }
 
@@ -23,7 +43,18 @@ h2 {
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
     margin: 0 auto;
+    height: 100%;
     justify-items: center;
     align-items: center;
+    gap: 0px;
 }
 
+.reasons {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+.color {
+    background-color: #012300;
+}
