--- a/letters/Reasons-3.css
+++ b/letters/Reasons-3.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #FDFBE1;
     margin: 0;
@@ -57,18 +58,34 @@ p {
     gap: 0;
 }
 
-.color {
-    background-color: #012300;
-}
-
 .photo {
-    grid-row: 1 / 3;
-    grid-column: 2 / 3;
+    grid-column: 2 /3;
+    grid-row: 1 / 4;
     background-image: url('res/reasons-1.jpeg');
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 100%;
+}
+
+.reasons.first {
+    grid-column: 1;
+    grid-row:1;
+}
+
+.reasons.second {
+    grid-column: 3;
+    grid-row:1;
+}
+
+.reasons.third {
+    grid-column: 1;
+    grid-row:3;
+}
+
+.reasons.fourth {
+    grid-column: 3;
+    grid-row:3;
 }
 
 button {
@@ -88,4 +105,3 @@ button {
     width: 200px;
     height: fit-content;
 }
-
