--- a/letters/Reasons.css
+++ b/letters/Reasons.css
@@ -76,7 +76,7 @@ button {
     font-family: 'Source serif 4';
     font-weight: 400;
     font-style: italic;
-    font-size: 32px;
+    font-size: 102px;
     color: #FFFFFF;
     box-shadow: none;
     border: none;
@@ -85,7 +85,6 @@ button {
     position: fixed;
     bottom: 0;
     right: 0;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: fit-content;
 }
-
