--- a/letters/Reasons-2.css
+++ b/letters/Reasons-2.css
@@ -77,7 +77,7 @@ button {
     font-family: 'Source serif 4';
     font-weight: 400;
     font-style: italic;
-    font-size: 32px;
+    font-size: 102px;
     color: #FFFFFF;
     box-shadow: none;
     border: none;
@@ -86,8 +86,8 @@ button {
     position: fixed;
     bottom: 0;
     right: 0;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: fit-content;
 }
 
 
