--- a/letters/Heart-Collage.css
+++ b/letters/Heart-Collage.css
@@ -9,7 +9,7 @@ body {
     background-color: #8D0000;
 }
 img {
-    width: 100%;
+    width: 110%;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -18,7 +18,7 @@ img {
 h1 {
     display: block;
     font-family: 'Great Vibes', cursive !important;
-    font-size: 52px;
-    color: #000000;
+    font-size: 72px;
+    color: #EEEEEE;
 }
 
