--- a/intro.css
+++ b/intro.css
@@ -91,12 +91,18 @@ img.dup {
 }
 
 .butt {
-  display: inline-block;
+  display: flex;
   padding: 12px 24px;
   background: #333;
   color: white;
+  width: 120px;
+  height: 70px;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
   text-decoration: none;
   border-radius: 6px;
-    position: fixed;
-    z-index: 999;
+  position: fixed;
+  z-index: 999;
+  transform: translateY(50%);
 }
