--- a/intro.css
+++ b/intro.css
@@ -90,19 +90,20 @@ img.dup {
     height: auto;
 }
 
-.butt {
-  display: flex;
-  padding: 12px 24px;
-  background: #333;
-  color: white;
-  width: 120px;
-  height: 70px;
-  align-items: center;
-  justify-content: center;
-  font-size: 50px;
-  text-decoration: none;
-  border-radius: 6px;
-  position: fixed;
-  z-index: 999;
-  transform: translateY(50%);
+button {
+    background-color: #F81B3F;
+    font-family: 'Source serif 4';
+    font-weight: 400;
+    font-style: italic;
+    font-size: 102px;
+    color: #FFFFFF;
+    box-shadow: none;
+    border: none;
+    border-radius: 15px;
+    margin: 10px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 150px;
+    height: fit-content;
 }
