--- a/letters/Supportive.css
+++ b/letters/Supportive.css
@@ -1,21 +1,14 @@
-html, body {
+body {
   margin: 0;
   padding: 0;
   width: 100%;
   min-height: 100%;
   overflow: auto;
+  background-repeat: no-repeat;
+  background-image: url('res/letter-2.png');
+  background-position: center;
 }
 
-.bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-}
 .butt {
     background-color: #F81B3F;
     font-family: 'Source serif 4';
