--- a/letters/Supportive.css
+++ b/letters/Supportive.css
@@ -1,14 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  min-height: 100%;
-  overflow: auto;
-  background-repeat: no-repeat;
-  background-image: url('res/letter-2.png');
-  background-position: center;
 }
 
+.bg {
+    width: 100vw;
+    height: auto;
+}
 .butt {
     background-color: #F81B3F;
     font-family: 'Source serif 4';
